--- a/index.html
+++ b/index.html
@@ -85,13 +85,12 @@
     <div id="map"></div>
     <div class="sliderConteiner">
       <p>Выбор года</p>
-      <label id="yaer"></label>
       <input
         type="range"
-        min="0"
-        max="7"
+        min="1"
+        max="8"
         step="1"
-        value="0"
+        value="1"
         class="slider"
         list="rangeList"
         id="slider"
@@ -109,7 +108,6 @@
     </div>
 
     <script>
-      const years = [2023, 2024, 2025, 2026, 2027, 2028, 2029, 2030];
       mapboxgl.accessToken =
         "pk.eyJ1IjoibWFwLXZzbWV4cGVydCIsImEiOiJjbG03ams2dTQwMThwM2Vycm5tZ2V4ZTJtIn0.RRZEsbDbSSuIDTOrHXMUzw";
       const map = new mapboxgl.Map({
@@ -244,39 +242,19 @@
             ],
           },
         });
-        
         map.addLayer({
           id: "route-width",
           type: "line",
           source: "route",
-          layout: {
-            "line-join": "round",
-            "line-cap": "round",
-          },
           paint: {
             "line-color": "#c93c20",
-            "line-width": [
-              "interpolate",
-              ["linear"],
-              ["number", ["get", "year"]],
-              2, 
-              4,
-              6,
-              8,
-              10,
-              12,
-              14,
-              16,
-            ],
+            "line-width": 2,
           },
         });
-        
-      });
-      document.getElementById("slider").addEventListener("input", (event) => {
-        const year = parseInt(event.target.value);
-        console.log(year);
-        map.setFilter("route-width", ["==", 'year', year]);
-        document.getElementById('year').textContent = years[year];
+        document.querySelector('#slider').addEventListener("input", () => {
+            const year = parseInt(document.getElementById("slider").value);
+            map.setPaintProperty("route-width", "line-width", year*2);
+          });
       });
     </script>
   </body>
